--- a/src/Services/Basket.API/Basket.API.csproj
+++ b/src/Services/Basket.API/Basket.API.csproj
@@ -9,8 +9,8 @@
 
   <ItemGroup>
     <PackageReference Include="CoreApiResponse" Version="1.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.4" />
-    <PackageReference Include="MongoRepo" Version="1.0.6" />
+    <PackageReference Include="Microsoft.Extensions.Caching.StackExchangeRedis" Version="8.0.4" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
