--- a/src/Services/Basket.API/appsettings.json
+++ b/src/Services/Basket.API/appsettings.json
@@ -1,8 +1,7 @@
 {
   "ConnectionStrings": {
-    "Catalog.API": "mongodb://localhost:27017"
+    "BasketDB" :"localhost:6379"
   },
-  "DatabaseName": "CatalogDb",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
